# DropVault-V1

./: Dockerfile  README.md  package-lock.json
DropVault/: Dockerfile  Dockerfile2  README.md  angular.json  explication-lance-dockerfile.txt  karma.conf.js  nginx.conf  package-lock.json  package.json  proxy.conf.json  tslint.json
DropVault/e2e/src/: app.e2e-spec.ts  app.po.ts
DropVault/src/: index.html  styles.css
DropVault/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
DropVault/src/app/Services/: authentification.service.ts  crud.servive.ts  echange.service.ts  envoi-fichier.service.ts  guard.service.ts  stockage.service.ts  upload-files.service.ts
DropVault/src/app/accueil/: accueil.component.css  accueil.component.html  accueil.component.ts
DropVault/src/app/echange/: echange.component.css  echange.component.html  echange.component.spec.ts  echange.component.ts
DropVault/src/app/error/: error.component.ts
DropVault/src/app/formulaire/: formulaire.component.css  formulaire.component.html  formulaire.component.ts
DropVault/src/app/models/: file.model.ts  user.models.ts
DropVault/src/app/platform-sharing/: platform-sharing.component.css  (+3 more)
DropVault/wasm/: Cargo.toml
DropVault/wasm/pkg/: hello_wasm.d.ts  hello_wasm_bg.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  package.json
DropVault/wasm/src/: lib.rs
Les fichiers authentications/: .env  Cargo.toml
Les fichiers authentications/src/: handlers.rs  main.rs
rust-rest-stockage/src/: main.rs
(+6 files in other folders)
