[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["romainlom1843 <romain.lombardo@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.7"
aes-gcm= "0.8.0"
double-ratchet = "0.1"
rand_core= "^0.4"
hex = "0.3.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
