[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["romainlom1843 <romain.lombardo@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.7"
aes-gcm= "0.8.0"
x25519-dalek = "1.1.0"
ed448-goldilocks = "0.7.0"
rand_core= { version = "0.5", default-features = false }
base64= "0.13.0"
console_error_panic_hook = "0.1.6"
pbkdf2 = "0.7"
hex = "0.4.0"
x448="0.6.0"
rand="0.7.0-pre.0"
getrandom = { version = "*", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version="0.3"
features = [
 "console",
]

[dev-dependencies]
rand="0.7.0-pre.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.1.9", features = ["dummy"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
debug= true

